@@ -1,6 +1,7 @@
 Version 3.0.3 August 6, 2006
 ============================
 BUG: Ticket#264 - Typos in some exception throw statements (Knut)
+BUG: TDataGrid may complain getting ItemType on a non-object if the grid is not data-bound (Qiang)
 NEW: Added TStyleSheet (Wei)
 
 Version 3.0.2 July 2, 2006
